# dotfiles

./: .bash_profile  .bashrc
.config/: kdeglobals
.config/MangoHud/: MangoHud.conf
.config/fastfetch/: quick.jsonc
.config/gtk-4.0/: settings.ini
.config/hypr/: hyprland.conf
.config/kitty/: kitty.conf
.config/quickshell/: .qmlls.ini  Bar.qml  execOnce.sh  shell.qml  test.js
.config/quickshell/assets/: Fonts.qml
.config/quickshell/assets/images/: weathers.jpg~
.config/quickshell/modules/bar/: ScreenCorners.qml  SpecialWorkspace.qml  Workspaces.qml
.config/quickshell/modules/common/: BarVisualizer.qml  HorizontalProgressBar.qml  KeyHandlers.qml  List.qml  MarqueeText.qml  MouseControl.qml  (+5 more)
.config/quickshell/services/: AudioInfo.qml  CalendarInfo.qml  Cava.qml  Color.qml  DateTime.qml  GithubInfo.qml  HyprInfo.qml  MediaPlayerInfo.qml  SystemInfo.qml  Theme.qml  Uptime.qml  WeatherInfo.qml  qsconfig.json
.icons/MiyabiLinuxCursor/cursors/: Alternate  Busy  Diagonal1  Diagonal2  Handwriting  Help  Horizontal  Link  Move  Normal  Person  Pin  Precision  Text  Unavailable  Vertical  Working  center_ptr  col-resize  color-picker  crossed_circle  ibeam  left_ptr_help  move  ne-resize  nwse-resize  size_bdiag  ul_angle
ayano/: CMakeLists.txt  main.cpp
ayano/qml/: Main.qml
programs/c/: busfare.c  divisiblebysix.c  median.c  termios.c  test.c
programs/cpp/: addtwonums.cpp  listnode.cpp  test.cpp  twosums.cpp
programs/ctui/: input.c  input.h  render.c  render.h  tui.c  tui.h  tui_context.h  tui_screen.h
programs/py/: launcher.py  pushRight.py
(+19 files in other folders)
